--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1> HELLO </h1>
-<p> I'm hostedddd </p>
+<h1> Hello, PAGE UNDER CONSTRUCTION. </h1>
+<h2> Page coming soon.. </h2>
+<p> P.S. I'm hosted. </p>
 </body>
 </html>
